--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -1,9 +1,9 @@
 <Project>
 
   <PropertyGroup>
-    <FrameworkVersion>8.0.0</FrameworkVersion>
-    <ExtensionsVersion>8.0.0</ExtensionsVersion>
-    <EntityFrameworkVersion>3.1.0</EntityFrameworkVersion>
+    <FrameworkVersion>8.0.19</FrameworkVersion>
+    <ExtensionsVersion>9.0.8</ExtensionsVersion>
+    <EntityFrameworkVersion>8.0.19</EntityFrameworkVersion>
     
     <IdentityServerVersion>4.1.2-*</IdentityServerVersion>
   </PropertyGroup>
@@ -39,11 +39,11 @@
     <PackageReference Update="Microsoft.Extensions.Options.ConfigurationExtensions" Version="$(ExtensionsVersion)" />
     
     <!--misc -->
-    <PackageReference Update="Newtonsoft.Json" Version="12.0.2" />
-    <PackageReference Update="Microsoft.IdentityModel.Protocols.OpenIdConnect" Version="5.6.0" />
-    <PackageReference Update="System.IdentityModel.Tokens.Jwt" Version="[5.6.0,6.0)" />
-    <PackageReference Update="System.Security.Principal.Windows" Version="4.7.0" />
-    <PackageReference Update="AutoMapper" Version="[10.0.0,11.0)" />
+    <PackageReference Update="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Update="Microsoft.IdentityModel.Protocols.OpenIdConnect" Version="8.13.1" />
+    <PackageReference Update="System.IdentityModel.Tokens.Jwt" Version="8.13.1" />
+    <PackageReference Update="System.Security.Principal.Windows" Version="5.0.0" />
+    <PackageReference Update="AutoMapper" Version="15.0.1" />
     
     <!--microsoft asp.net core -->
     <PackageReference Update="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="$(FrameworkVersion)" />
