--- a/src/AspNetIdentity/src/IdentityServer4.AspNetIdentity.csproj
+++ b/src/AspNetIdentity/src/IdentityServer4.AspNetIdentity.csproj
@@ -38,10 +38,12 @@
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
     
-  <ItemGroup>
-    <PackageReference Include="IdentityServer4" />
-    
+  <ItemGroup>    
     <PackageReference Include="Microsoft.SourceLink.GitHub" PrivateAssets="All" />
+  </ItemGroup>
+    
+  <ItemGroup>
+    <ProjectReference Include="..\..\IdentityServer4\src\IdentityServer4.csproj" />
   </ItemGroup>
 
 </Project>
