--- a/src/EntityFramework/src/IdentityServer4.EntityFramework.csproj
+++ b/src/EntityFramework/src/IdentityServer4.EntityFramework.csproj
@@ -9,9 +9,9 @@
     <AssemblyName>IdentityServer4.EntityFramework</AssemblyName>
     <PackageTags>OAuth2;OAuth 2.0;OpenID Connect;Security;Identity;IdentityServer;EntityFramework</PackageTags>
     <PackageIcon>icon.jpg</PackageIcon>
-    <PackageProjectUrl>https://github.com/IdentityServer/IdentityServer4</PackageProjectUrl>
+    <!--<PackageProjectUrl>https://github.com/IdentityServer/IdentityServer4</PackageProjectUrl>-->
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
-    <PackageReleaseNotes>https://github.com/IdentityServer/IdentityServer4/releases</PackageReleaseNotes>
+    <!--<PackageReleaseNotes>https://github.com/IdentityServer/IdentityServer4/releases</PackageReleaseNotes>-->
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
@@ -32,10 +32,12 @@
     <None Include="../../../icon.jpg" Pack="true" Visible="false" PackagePath="" />
   </ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="IdentityServer4" />
-    <PackageReference Include="IdentityServer4.EntityFramework.Storage" />
-    
+  <ItemGroup>    
     <PackageReference Include="Microsoft.SourceLink.GitHub" PrivateAssets="All" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\EntityFramework.Storage\src\IdentityServer4.EntityFramework.Storage.csproj" />
+    <ProjectReference Include="..\..\IdentityServer4\src\IdentityServer4.csproj" />
   </ItemGroup>
 </Project>
